test/CheckError/Conditional/IntCondition.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// Integers can't be used as conditions in Loci
// (no implicit cast to bool).

export int main(unused int argc, unused ubyte ** argv) {
	// CHECK: .loci:9:2: error: user cast failed from type 'int8_t' to type 'notag(bool_t)'
	if (1) {
		// ...
	}
	return 0;
}

// CHECK: 1 error generated.
